--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "emoji",
   "displayName": "Emoji",
   "description": "Plugin to insert emoji from the command palette",
-  "version": "0.0.3",
+  "version": "1.0.0",
   "publisher": "Perkovec",
+  "author": "Ilya Karpuk <perkovec24@gmail.com>",
   "icon": "icon.png",
   "bugs": {
     "url": "https://github.com/Perkovec/Emoji/issues"
@@ -22,21 +23,21 @@
   },
   "homepage": "https://github.com/Perkovec/Emoji",
   "engines": {
-    "vscode": "^1.0.0"
+    "vscode": "^1.44.0"
   },
   "categories": [
     "Other"
   ],
   "activationEvents": [
-    "onCommand:emoji.indertEmoji",
+    "onCommand:emoji.insert",
     "onCommand:emoji.insertMarkdown",
     "onCommand:emoji.insertUnicode"
   ],
-  "main": "./extension",
+  "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "emoji.indertEmoji",
+        "command": "emoji.insert",
         "title": "Emoji: Insert emoji"
       },
       {
@@ -50,12 +51,28 @@
     ]
   },
   "scripts": {
-    "postinstall": "node ./node_modules/vscode/bin/install"
+    "vscode:prepublish": "npm run compile",
+    "compile": "tsc -p ./",
+    "lint": "eslint src --ext ts",
+    "watch": "tsc -watch -p ./",
+    "pretest": "npm run compile && npm run lint",
+    "test": "node ./out/test/runTest.js"
   },
   "dependencies": {
-    "emoji-datasource": "^2.4.4"
+    "emoji-datasource": "^6.0.0"
   },
   "devDependencies": {
-    "vscode": "^0.11.0"
+    "@types/glob": "^7.1.1",
+    "@types/jsdoc-to-markdown": "^6.0.0",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.11.0",
+    "@types/vscode": "^1.44.0",
+    "@typescript-eslint/eslint-plugin": "^2.30.0",
+    "@typescript-eslint/parser": "^2.30.0",
+    "eslint": "^6.8.0",
+    "glob": "^7.1.6",
+    "mocha": "^7.1.2",
+    "typescript": "^3.8.3",
+    "vscode-test": "^1.3.0"
   }
 }
